--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -838,25 +838,71 @@ footer {
             flex-wrap: wrap; }
             .create-page .create-section .create-box .mid #details-stage .details .video-info, .create-page .create-section .create-box .mid #details-stage .details .video-player {
               display: flex;
-              flex-direction: column; }
+              flex-direction: column;
+              padding: 1.5%; }
             .create-page .create-section .create-box .mid #details-stage .details .video-info {
-              width: 65%; }
-              .create-page .create-section .create-box .mid #details-stage .details .video-info .title h1 {
-                width: fit-content;
-                display: inline-block;
-                font-weight: bold;
-                font-size: 25px;
-                float: left; }
-              .create-page .create-section .create-box .mid #details-stage .details .video-info .title #reuse {
-                margin-top: 7.5px;
-                font-weight: bold;
-                font-size: 14px;
-                width: fit-content;
-                display: inline-block;
-                float: right; }
+              width: 62%; }
+              .create-page .create-section .create-box .mid #details-stage .details .video-info .title {
+                margin-bottom: 20px; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .title h1 {
+                  width: fit-content;
+                  display: inline-block;
+                  font-weight: bold;
+                  font-size: 24px;
+                  float: left; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .title #reuse {
+                  margin-top: 7.5px;
+                  font-weight: bold;
+                  font-size: 14px;
+                  width: fit-content;
+                  display: inline-block;
+                  float: right; }
+              .create-page .create-section .create-box .mid #details-stage .details .video-info .input {
+                position: relative;
+                margin-bottom: 24px; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input label, .create-page .create-section .create-box .mid #details-stage .details .video-info .input i, .create-page .create-section .create-box .mid #details-stage .details .video-info .input p {
+                  color: #606060;
+                  position: absolute;
+                  transform: translate(-50%, -50%); }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input label {
+                  text-align: left;
+                  left: 9.7%;
+                  top: 21%;
+                  font-size: 12px; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input i {
+                  left: 19%;
+                  top: 21%; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input p {
+                  left: 95%;
+                  top: 80%;
+                  font-size: 12px; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input input {
+                  padding-left: 2.5%;
+                  padding-right: 2.5%;
+                  width: 95%;
+                  padding-top: 30px;
+                  padding-bottom: 30px;
+                  border-radius: 5px;
+                  border: 1px solid #606060;
+                  font-size: 15px; }
+                  .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:focus {
+                    outline: none !important;
+                    border: 1px solid #1a73e8; }
+                    .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:focus + label {
+                      color: #1a73e8; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input#desc label {
+                  top: 12%;
+                  left: 8.2%; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input#desc i {
+                  top: 12%;
+                  left: 16%; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input#desc p {
+                  top: 90%; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .input#desc input {
+                  padding-bottom: 120px; }
             .create-page .create-section .create-box .mid #details-stage .details .video-player {
-              width: 35%;
-              margin-top: 40px; }
+              width: 32%;
+              margin-top: 45px; }
         .create-page .create-section .create-box .mid .bottom {
           height: 20px;
           width: 940px;
