--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -124,16 +124,19 @@
                         .video-info, .video-player {
                             display: flex;
                             flex-direction: column;
+                            padding: 1.5%;
                         }
                         .video-info {
-                            width: 65%;
+                            width: 62%;
 
                             .title {
+                                margin-bottom: 20px;
+
                                 h1 {
                                     width: fit-content;
                                     display: inline-block;
                                     font-weight: bold;
-                                    font-size: 25px;
+                                    font-size: 24px;
                                     float: left;
                                 }
                                 #reuse {
@@ -145,10 +148,70 @@
                                     float: right;
                                 }
                             }
+                            .input {
+                                position: relative;
+                                margin-bottom: 24px;
+
+                                label, i, p {
+                                    color: $secondary-font-color;
+                                    position: absolute;
+                                    transform: translate(-50%, -50%);
+                                }
+                                label {
+                                    text-align: left;
+                                    left: 9.7%;
+                                    top: 21%;
+                                    font-size: 12px;
+                                }
+                                i {
+                                    left: 19%;
+                                    top: 21%;
+                                }
+                                p {
+                                    left: 95%;
+                                    top: 80%;
+                                    font-size: 12px;
+                                }
+                                input {
+                                    padding-left: 2.5%;
+                                    padding-right: 2.5%;
+                                    width: 95%;
+                                    padding-top: 30px;
+                                    padding-bottom: 30px;
+                                    border-radius: 5px;
+                                    border: 1px solid $secondary-font-color;
+                                    font-size: 15px;
+
+                                    &:focus {
+                                        outline: none !important;
+                                        border: 1px solid $sign-link-font-color;
+
+                                        &+label {
+                                            color: $sign-link-font-color;
+                                        }
+                                    }
+                                }
+                                &#desc {
+                                    label {
+                                        top: 12%;
+                                        left: 8.2%;
+                                    }
+                                    i {
+                                        top: 12%;
+                                        left: 16%;
+                                    }
+                                    p {
+                                        top: 90%;
+                                    }
+                                    input {
+                                        padding-bottom: 120px;
+                                    }
+                                }
+                            }
                         }
                         .video-player {
-                            width: 35%;
-                            margin-top: 40px;
+                            width: 32%;
+                            margin-top: 45px;
                         }
                     }
                 }
