--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -16,6 +16,7 @@ $secodary-font-family: notosans;
 
 $main-font-color: #030303;
 $secondary-font-color: #606060;
+$third-font-color: #0d0d0d;
 $sign-link-font-color: #1a73e8;
 $sign-link-hover-font-color: #155bb6;
 $sign-secondary-font-color: #5f6368;
