--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -894,13 +894,15 @@ footer {
                   padding-top: 30px;
                   padding-bottom: 30px;
                   border-radius: 5px;
-                  border: 1px solid #606060;
+                  border: 1px solid #b7b7b7;
                   font-size: 15px; }
                   .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:focus {
                     outline: none !important;
                     border: 1px solid #1a73e8; }
                     .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:focus + label {
                       color: #1a73e8; }
+                  .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:hover {
+                    border-color: #0d0d0d; }
                 .create-page .create-section .create-box .mid #details-stage .details .video-info .input#desc label {
                   top: 12%;
                   left: 8.2%; }
