--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -192,7 +192,7 @@
                                     padding-top: 30px;
                                     padding-bottom: 30px;
                                     border-radius: 5px;
-                                    border: 1px solid $secondary-font-color;
+                                    border: 1px solid $darker-main-border-color;
                                     font-size: 15px;
 
                                     &:focus {
@@ -202,6 +202,9 @@
                                         &+label {
                                             color: $sign-link-font-color;
                                         }
+                                    }
+                                    &:hover {
+                                        border-color: $third-font-color;
                                     }
                                 }
                                 &#desc {
