--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -841,7 +841,7 @@ footer {
             .create-page .create-section .create-box .mid #details-stage .details h2 {
               text-align: left;
               font-weight: bold;
-              font-size: 15px;
+              font-size: 14px;
               margin-bottom: 8px; }
             .create-page .create-section .create-box .mid #details-stage .details p {
               text-align: left;
@@ -896,13 +896,13 @@ footer {
                   border-radius: 5px;
                   border: 1px solid #b7b7b7;
                   font-size: 15px; }
+                  .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:hover {
+                    border-color: #0d0d0d; }
                   .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:focus {
                     outline: none !important;
                     border: 1px solid #1a73e8; }
                     .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:focus + label {
                       color: #1a73e8; }
-                  .create-page .create-section .create-box .mid #details-stage .details .video-info .input input:hover {
-                    border-color: #0d0d0d; }
                 .create-page .create-section .create-box .mid #details-stage .details .video-info .input#desc label {
                   top: 12%;
                   left: 8.2%; }
@@ -916,6 +916,8 @@ footer {
               .create-page .create-section .create-box .mid #details-stage .details .video-info .thumbnail {
                 margin-bottom: 24px;
                 position: relative; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .thumbnail p {
+                  margin-bottom: 8px; }
                 .create-page .create-section .create-box .mid #details-stage .details .video-info .thumbnail .thumbnail-input {
                   position: relative;
                   display: block;
@@ -945,6 +947,24 @@ footer {
                   transform: translate(-50%, -50%);
                   z-index: 2;
                   color: #606060; }
+              .create-page .create-section .create-box .mid #details-stage .details .video-info .playlists {
+                margin-bottom: 24px; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .playlists select {
+                  width: 260px;
+                  height: 48px;
+                  float: left;
+                  color: #606060;
+                  border: 1px solid #b7b7b7;
+                  background-color: white;
+                  border-radius: 5px;
+                  font-size: 15px;
+                  padding-left: 7px;
+                  padding-right: 7px; }
+                  .create-page .create-section .create-box .mid #details-stage .details .video-info .playlists select:hover {
+                    cursor: pointer;
+                    border-color: #0d0d0d; }
+                .create-page .create-section .create-box .mid #details-stage .details .video-info .playlists p {
+                  margin-bottom: 8px; }
             .create-page .create-section .create-box .mid #details-stage .details .video-player {
               width: 32%;
               margin-top: 45px; }
