--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -30,3 +30,5 @@ $lighter-main-border-color: #e6e6e6;
 // SIGN IN BUTTON
 
 $sign-main-color: #065fd4;
+
+$gray-background-color: rgba(0, 0, 0, 0.06);
