--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -92,7 +92,7 @@ header {
                 padding-bottom: 10px;
 
                 &:hover {
-                    background-color: $main-border-color;
+                    background-color: $gray-background-color;
                 }
                 p {
                     padding-top: 0;
@@ -375,7 +375,7 @@ header {
             padding-bottom: 10px;
 
             &:hover {
-                background-color: $main-border-color;
+                background-color: $gray-background-color;
             }
             p {
                 padding-top: 0;
