--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -32,3 +32,4 @@ $lighter-main-border-color: #e6e6e6;
 $sign-main-color: #065fd4;
 
 $gray-background-color: rgba(0, 0, 0, 0.06);
+$timeline-hover-background-color: rgba(6, 95, 212, 0.2);
