--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -17,6 +17,7 @@ $secodary-font-family: notosans;
 $main-font-color: #030303;
 $secondary-font-color: #606060;
 $third-font-color: #0d0d0d;
+$disabled-font-color: #909090;
 $sign-link-font-color: #1a73e8;
 $sign-link-hover-font-color: #155bb6;
 $sign-secondary-font-color: #5f6368;
@@ -33,3 +34,4 @@ $sign-main-color: #065fd4;
 
 $gray-background-color: rgba(0, 0, 0, 0.06);
 $timeline-hover-background-color: rgba(6, 95, 212, 0.2);
+$timeline-disabled-circle-color: #ccc;
