--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -121,15 +121,79 @@
                         padding-top: 8px;
                         padding-bottom: 8px;
 
+                        .lines {
+                            width: 100%;
+                            height: 1px;
+                            
+                            .line {
+                                position: relative;
+                                
+                                &::before {
+                                    content: "";
+                                    position: absolute;
+                                    width: 8px;
+                                    height: 8px;
+                                    top: 32.5px;
+                                    left: 0%;
+                                    border-radius: 50%;
+                                    border: 4px solid $timeline-disabled-circle-color;
+                                    background-color: #fff;
+                                    z-index: 1;
+                                }
+                                &::after {
+                                    content: "";
+                                    position: absolute;
+                                    left: 12%;
+                                    top: 40.5px;
+                                    background-color: $disabled-font-color;
+                                    width: 75%;
+                                    height: 1px;
+                                }
+                                &:not(:first-child) {
+                                    &::after {
+                                        content: none;
+                                    }
+                                }
+
+                                &:nth-child(1) {
+                                    &::before {
+                                        left: 12%;
+                                    }
+                                }
+                                &:nth-child(2) {
+                                    &::before {
+                                        left: 37%;
+                                    }
+                                }
+                                &:nth-child(3) {
+                                    &::before {
+                                        left: 61.5%;
+                                    }
+                                }
+                                &:nth-child(4) {
+                                    &::before {
+                                        left: 86%;
+                                    }
+                                }
+                                &.active {
+                                    &::before {
+                                        width: 12px;
+                                        height: 12px;
+                                        top: 30px;
+                                        border-color: $sign-main-color;
+                                    }
+                                }
+                            }
+                        }
                         a {
                             text-align: center;
                             display: inline-block;
                             width: 128px;
                             height: 18px;
-                            padding-top: 23px;
-                            padding-bottom: 23px;
-                            font-size: 14px;
-                            color: $sign-main-color;
+                            padding-top: 7px;
+                            padding-bottom: 39px;
+                            font-size: 13.5px;
+                            color: $disabled-font-color;
                             border-radius: 4px;
                             margin-left: 42px;
                             margin-right: 42px;
@@ -137,6 +201,9 @@
 
                             &:hover {
                                 background-color: $timeline-hover-background-color;
+                            }
+                            &.active {
+                                color: $sign-main-color;
                             }
                         }
                     }
