--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -446,7 +446,49 @@
                         }
                         .video-player {
                             width: 32%;
-                            margin-top: 45px;
+                            margin-top: 49px;
+
+                            .player {
+                                background-color: $gray-background-color;
+                                position: relative;
+
+                                .left {
+                                    width: 80%;
+
+                                    p, a {
+                                        margin-left: 16px;
+                                        margin-right: 16px;
+                                        width: fit-content;
+                                    }
+                                    p {
+                                        font-size: 12px;
+                                        margin-top: 12px;
+                                    }
+                                    a {
+                                        display: block;
+                                        text-align: left;
+                                        font-size: 15px;
+                                        padding-bottom: 5px;
+                                    }
+                                }
+                                i {
+                                    font-size: 20px;
+                                    position: absolute;
+                                    left: 90%;
+                                    top: 70%;
+                                    transform: translate(-50%, -50%);
+                                    color: $secondary-font-color;
+
+                                    &:hover {
+                                        cursor: pointer;
+                                        color: $main-font-color;
+                                    }
+                                }
+                                video {
+                                    width: 100%;
+                                    height: 157px;
+                                }
+                            }
                         }
                     }
                 }
