--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -809,13 +809,21 @@ footer {
             .create-page .create-section .create-box .timeline .lines .line:not(:first-child)::after {
               content: none; }
             .create-page .create-section .create-box .timeline .lines .line:nth-child(1)::before {
+              left: 11.5%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(1).active::before {
               left: 11.2%; }
             .create-page .create-section .create-box .timeline .lines .line:nth-child(2)::before {
               left: 36.5%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(2).active::before {
+              left: 36.2%; }
             .create-page .create-section .create-box .timeline .lines .line:nth-child(3)::before {
               left: 61.8%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(3).active::before {
+              left: 61.5%; }
             .create-page .create-section .create-box .timeline .lines .line:nth-child(4)::before {
               left: 87.1%; }
+            .create-page .create-section .create-box .timeline .lines .line:nth-child(4).active::before {
+              left: 86.8%; }
             .create-page .create-section .create-box .timeline .lines .line.active::before {
               width: 12px;
               height: 12px;
