added a back button

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1139,13 +1139,23 @@ footer {
               font-size: 20px;
               color: #065fd4; }
           .create-page .create-section .create-box .mid .bottom .right {
-            float: right; }
+            float: right;
+            position: relative;
+            width: 150px; }
             .create-page .create-section .create-box .mid .bottom .right .btn {
               font-size: 14px;
               background-color: #065fd4;
               color: white;
               padding: 10px 15px;
-              border-radius: 2px; }
+              border-radius: 2px;
+              position: absolute;
+              top: 50%;
+              left: 75%;
+              transform: translate(-50%, -50%); }
+              .create-page .create-section .create-box .mid .bottom .right .btn.back {
+                background-color: white;
+                color: #606060;
+                left: 27.5%; }
 
 * {
   scroll-behavior: smooth;
