--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -549,6 +549,8 @@
                     }
                     .right {
                         float: right;
+                        position: relative;
+                        width: 150px;
 
                         .btn {
                             font-size: 14px;
@@ -556,6 +558,16 @@
                             color: white;
                             padding: 10px 15px;
                             border-radius: 2px;
+                            position: absolute;
+                            top: 50%;
+                            left: 75%;
+                            transform: translate(-50%, -50%);
+
+                            &.back {
+                                background-color: white;
+                                color: $secondary-font-color;
+                                left: 27.5%;
+                            }
                         }
                     }
                 }
