--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -222,22 +222,38 @@
                         cursor: pointer;
                     }
                 }
-                #details-stage, #elements-stage, #checks-stage, #visibility-stage {
+                .stage {
                     height: 797px;
                     margin-left: 40px;
                     margin-right: 40px;
                     overflow-y: scroll;
                     overflow-x: hidden;
-                }
-                #details-stage {
-                    .details {
+
+                    .title {
+                        margin-bottom: 20px;
+
+                        h1 {
+                            width: fit-content;
+                            display: inline-block;
+                            font-weight: bold;
+                            font-size: 24px;
+                            float: left;
+                        }
+                        p {
+                            color: $main-font-color;
+                        }
+                    }
+                    .details, .elements {
                         height: 718px;
                         width: 100%;
                         display: flex;
                         flex-direction: row;
                         flex-wrap: wrap;
                         margin-top: 80px;
-                        
+                    }
+                }
+                #details-stage {
+                    .details {
                         h2 {
                             text-align: left;
                             font-weight: bold;
@@ -258,15 +274,6 @@
                             width: 62%;
 
                             .title {
-                                margin-bottom: 20px;
-
-                                h1 {
-                                    width: fit-content;
-                                    display: inline-block;
-                                    font-weight: bold;
-                                    font-size: 24px;
-                                    float: left;
-                                }
                                 #reuse {
                                     margin-top: 7.5px;
                                     font-weight: bold;
@@ -511,6 +518,20 @@
                                     width: 100%;
                                     height: 157px;
                                 }
+                            }
+                        }
+                    }
+                }
+                #elements-stage {
+                    .elements {
+                        padding: 1.5%;
+
+                        .title {
+                            text-align: left;
+
+                            h1 {
+                                margin-bottom: 10px;
+                                float: none;
                             }
                         }
                     }
