--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1114,13 +1114,66 @@ footer {
             .create-page .create-section .create-box .mid #details-stage .details .video-player .player video {
               width: 100%;
               height: 157px; }
-        .create-page .create-section .create-box .mid #elements-stage .elements {
-          padding: 1.5%; }
-          .create-page .create-section .create-box .mid #elements-stage .elements .title {
-            text-align: left; }
-            .create-page .create-section .create-box .mid #elements-stage .elements .title h1 {
-              margin-bottom: 10px;
-              float: none; }
+        .create-page .create-section .create-box .mid #elements-stage {
+          overflow-y: hidden; }
+          .create-page .create-section .create-box .mid #elements-stage .elements {
+            width: 97%;
+            padding: 1.5%;
+            align-content: flex-start; }
+            .create-page .create-section .create-box .mid #elements-stage .elements .title {
+              text-align: left;
+              height: fit-content;
+              width: 100%; }
+              .create-page .create-section .create-box .mid #elements-stage .elements .title h1 {
+                margin-bottom: 10px;
+                float: none; }
+            .create-page .create-section .create-box .mid #elements-stage .elements .option {
+              width: 100%;
+              background-color: rgba(0, 0, 0, 0.06);
+              padding: 18px;
+              padding-left: 24px;
+              padding-right: 24px;
+              height: 52px;
+              margin-top: 24px; }
+              .create-page .create-section .create-box .mid #elements-stage .elements .option h2 {
+                font-size: 14.5px;
+                font-weight: bold;
+                text-align: left;
+                margin-bottom: 8px;
+                line-height: 24px; }
+              .create-page .create-section .create-box .mid #elements-stage .elements .option p {
+                font-size: 12.5px;
+                text-align: left;
+                line-height: 20px; }
+              .create-page .create-section .create-box .mid #elements-stage .elements .option a {
+                font-size: 14px;
+                font-weight: bold; }
+              .create-page .create-section .create-box .mid #elements-stage .elements .option .icon {
+                float: left;
+                position: relative;
+                height: 52px;
+                width: 52px;
+                margin-right: 24px; }
+                .create-page .create-section .create-box .mid #elements-stage .elements .option .icon i {
+                  position: absolute;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                  font-size: 22px;
+                  color: #606060; }
+              .create-page .create-section .create-box .mid #elements-stage .elements .option .btn {
+                float: right;
+                height: 52px;
+                width: 52px;
+                position: relative; }
+                .create-page .create-section .create-box .mid #elements-stage .elements .option .btn a {
+                  position: absolute;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                  white-space: nowrap; }
+                .create-page .create-section .create-box .mid #elements-stage .elements .option .btn.wide {
+                  width: 155px; }
         .create-page .create-section .create-box .mid .bottom {
           height: 20px;
           width: 940px;
