--- a/styles/sass/layout/_create.scss
+++ b/styles/sass/layout/_create.scss
@@ -523,15 +523,80 @@
                     }
                 }
                 #elements-stage {
+                    overflow-y: hidden;
+
                     .elements {
+                        width: 97%;
                         padding: 1.5%;
+                        align-content: flex-start;
 
                         .title {
                             text-align: left;
+                            height: fit-content;
+                            width: 100%;
 
                             h1 {
                                 margin-bottom: 10px;
                                 float: none;
+                            }
+                        }
+                        .option {
+                            width: 100%;
+                            background-color: $gray-background-color;
+                            padding: 18px;
+                            padding-left: 24px;
+                            padding-right: 24px;
+                            height: 52px;
+                            margin-top: 24px;
+                            
+                            h2 {
+                                font-size: 14.5px;
+                                font-weight: bold;
+                                text-align: left;
+                                margin-bottom: 8px;
+                                line-height: 24px;
+                            }
+                            p {
+                                font-size: 12.5px;
+                                text-align: left;
+                                line-height: 20px;
+                            }
+                            a {
+                                font-size: 14px;
+                                font-weight: bold;
+                            }
+                            .icon {
+                                float: left;
+                                position: relative;
+                                height: 52px;
+                                width: 52px;
+                                margin-right: 24px;
+
+                                i {
+                                    position: absolute;
+                                    top: 50%;
+                                    left: 50%;
+                                    transform: translate(-50%, -50%);
+                                    font-size: 22px;
+                                    color: $secondary-font-color;
+                                }
+                            }
+                            .btn {
+                                float: right;
+                                height: 52px;
+                                width: 52px;
+                                position: relative;
+
+                                a {
+                                    position: absolute;
+                                    top: 50%;
+                                    left: 50%;
+                                    transform: translate(-50%, -50%);
+                                    white-space: nowrap;
+                                }
+                                &.wide {
+                                    width: 155px;
+                                }
                             }
                         }
                     }
